# linux_compat

./: .gitignore  CMakeLists.txt  README.md
include/: syscall.h
include/bits/: syscall.h  user.h
include/sys/: prctl.h  sendfile.h  syscall.h  user.h
src/: prctl.c  sendfile.c
